--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-name: CUPS
-version: "1.6"
-slug: cupsik
-description: A CUPS print server with working AirPrint
+name: CUPS for Zebra
+version: "1.7"
+slug: cups
+description: A CUPS print server to expose and filter Zebra print jobs
 arch:
   - amd64
   - aarch64
@@ -15,6 +15,5 @@ ports:
 ports_description:
   631/tcp: For other devices on the local network to print to this server
   631/udp: For other devices on the local network to print to this server
-# ingress: false
 map:
   - addon_config:rw
